--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/platform-browser": "~11.0.0",
         "@angular/platform-browser-dynamic": "~11.0.0",
         "@angular/router": "~11.0.0",
+        "@ng-select/ng-select": "^5.1.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
@@ -28,7 +29,7 @@
         "@angular/cli": "~11.0.1",
         "@angular/compiler-cli": "~11.0.0",
         "@types/jasmine": "^3.6.3",
-        "@types/node": "^12.11.1",
+        "@types/node": "^12.19.15",
         "codelyzer": "^6.0.0",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
